fix: Menu jumps vertically on logout

--- a/src/ui/components/DropdownMenu/styles.scss
+++ b/src/ui/components/DropdownMenu/styles.scss
@@ -7,7 +7,7 @@
 
   display: inline-block;
   padding-bottom: 6px;
-  padding-top: 8px;
+  padding-top: 4px;
   position: relative;
 
   // This is needed because `:hover` on mobile prevents the main button to
